# arlen

./: .gitignore  LICENSING.md  README.md  REUSE.toml  TESTING.md  deny.toml
ai/ai-agent/: Cargo.toml
ai/ai-agent/src/: agentic.rs  behaviour.rs  canary.rs  compaction.rs  config.rs  dbus.rs  discovery.rs  effect_model.rs  engine.rs  executor.rs  fs_move.rs  gate.rs  graph.rs  handlers.rs  lib.rs  loader.rs  main.rs  receipt_store.rs  registry.rs  seams.rs  skills.rs  slice.rs  snapshot.rs  source.rs  spill.rs  undo_client.rs  undo_log.rs  working_set.rs  world.rs
ai/ai-agent/tests/: load_behaviours.rs  load_fixtures_via_loader.rs  route_fixtures.rs
ai/ai-core/: Cargo.toml
ai/ai-core/src/: audit.rs  capability.rs  compress.rs  graph_query.rs  lib.rs  mcp.rs  pipeline.rs  provider.rs  proxied.rs  routing.rs  screen.rs  tagging.rs
ai/ai-daemon/: Cargo.toml
ai/ai-daemon/src/: active_project.rs  config_watch.rs  graph_adapter.rs  lib.rs  live_provider.rs  main.rs  mcp_discovery.rs  peer.rs  provider_state.rs  registry.rs  selection.rs  service.rs  skill_route.rs  tool_loop.rs
ai/ai-explanation/: Cargo.toml
ai/ai-explanation/src/: explain.rs  lib.rs  prompt.rs  snapshot.rs  source.rs
ai/ai-meeting-notes/: Cargo.toml
ai/ai-meeting-notes/src/: lib.rs
ai/ai-model-manager/: Cargo.toml  catalog.toml
ai/ai-model-manager/src/: download.rs  fetch.rs  gguf.rs  hf.rs  installed.rs  lib.rs  store.rs  stream.rs
ai/ai-providers/: Cargo.toml
ai/ai-providers/src/: lib.rs  llama_server.rs  ollama.rs  proxied.rs
ai/ai-proxy/: Cargo.toml
ai/ai-proxy/seed/: models-dev-slim.json
ai/ai-proxy/src/: allowlist.rs  audit.rs  catalog.rs  connections_client.rs  forward.rs  lib.rs  main.rs  models_dev.rs  peer_auth.rs  service.rs  sovereignty.rs  transcode.rs  usage.rs
ai/ai-sandbox/: Cargo.toml
ai/ai-sandbox/src/: lib.rs  sandbox.rs
ai/ai-sandbox/test-fixtures/: sample.avif  sample.heic  sample.jxl
ai/ai-sandbox/tests/: audio_meta_integration.rs  codec_integration.rs  image_view_integration.rs  music_thumbnail_integration.rs  sandbox_integration.rs  seccomp_profile_integration.rs  thumbnail_integration.rs
ai/ai-skills/: Cargo.toml
ai/ai-skills/src/: discovery.rs  lib.rs  loader.rs  router.rs  skills.rs
ai/ai-undo-core/: Cargo.toml
ai/ai-undo-core/src/: effect_model.rs  lib.rs  undo_log.rs
ai/ai-undo-proto/: Cargo.toml
ai/ai-undo-proto/src/: lib.rs
ai/ai-undo-signer/: Cargo.toml
ai/ai-undo-signer/src/: auth.rs  checkpoint.rs  error.rs  key.rs  lib.rs  main.rs  paths.rs  server.rs  store.rs
contracts/artifact/: Cargo.toml
contracts/artifact/bindings/: Artifact.ts  ArtifactKind.ts  ArtifactMeta.ts  ArtifactOrigin.ts  ArtifactPayload.ts  ChartType.ts  DiagramLanguage.ts  ImageMediaType.ts  Link.ts  Series.ts
contracts/artifact/src/: build.rs  lib.rs  osc.rs
contracts/audit-proto/: Cargo.toml
contracts/audit-proto/src/: activity.rs  client.rs  lib.rs  read.rs  read_client.rs  sink.rs
contracts/capsule/: Cargo.toml
contracts/capsule/src/: lib.rs  scope.rs  slice.rs
contracts/consent-contract/: Cargo.toml
contracts/consent-contract/src/: lib.rs
contracts/file-change/: Cargo.toml
contracts/file-change/bindings/: ChangeProposal.ts  FileChange.ts  FileChangeSet.ts  FileOp.ts
contracts/file-change/src/: lib.rs
contracts/lenv/: Cargo.toml
contracts/lenv/src/: lib.rs  tofu.rs
contracts/meeting-note/: Cargo.toml
contracts/meeting-note/src/: lib.rs
contracts/run-consent-token/: Cargo.toml
contracts/run-consent-token/src/: lib.rs
contracts/transcript/: Cargo.toml
contracts/transcript/src/: lib.rs
daemons/ai-engine-daemon/: Cargo.toml
daemons/ai-engine-daemon/src/: agent_iface.rs  capability_map.rs  command_executor.rs  compensation.rs  consent.rs  consent_client.rs  consent_root.rs  curation.rs  curator.rs  dispatch.rs  engine_config.rs  execution_proof.rs  explain_iface.rs  file_executor.rs  graph_adapter.rs  lib.rs  main.rs  orchestrator.rs  pi_completion.rs  pi_driver.rs  pi_run.rs  placeholder.rs  proxy_executor.rs  read_executor.rs  reporter.rs  rpc_proxy.rs  session.rs  settings_executor.rs  sidecar.rs  supervisor.rs  undo_enact.rs  undo_signer.rs  wire.rs  write_executor.rs
daemons/ai-engine-daemon/tests/: e2e_gate.rs
daemons/anomaly-detector/: Cargo.toml
daemons/anomaly-detector/src/: alert_log.rs  detect.rs  lib.rs  main.rs  notify.rs  source.rs  state.rs
daemons/arlen-run/: Cargo.toml
daemons/arlen-run/src/: cgroup.rs  egress.rs  landlock_apply.rs  landlock_exec.rs  (+5 more)
daemons/audit-daemon/: Cargo.toml
daemons/bridge-ingest/: Cargo.toml
daemons/capsuled/: Cargo.toml
forage/: Cargo.toml
forage/bridge-install/: Cargo.toml
forage/capabilities/: Cargo.toml
forage/cookbook-index/: Cargo.toml
forage/cookbook-resolve/: Cargo.toml
forage/cookbook-sign/: Cargo.toml
forage/extract/: Cargo.toml
forage/fetch/: Cargo.toml
forage/package/: Cargo.toml
forage/patch/: Cargo.toml
forage/pipeline/: Cargo.toml
forage/signing/: Cargo.toml
forage/src/: cli.rs  main.rs
forage/store/: Cargo.toml
sdk/: .gitignore  Cargo.toml  README.md
sdk/arlen-input-client/: Cargo.toml
sdk/config/: Cargo.toml
sdk/config-format/: Cargo.toml
sdk/confiner/: Cargo.toml
sdk/i18n/: Cargo.toml
sdk/landlock-fence/: Cargo.toml
sdk/module-sdk/: .npmignore  Cargo.toml  index.ts  module.ts  package.json  postmsg.ts  tsconfig.build.json
sdk/modules/: Cargo.toml
sdk/net-guard/: Cargo.toml
sdk/os-sdk/: Cargo.toml  build.rs
sdk/permissions/: Cargo.toml
sdk/proc-collect/: Cargo.toml
sdk/screen-capture/: Cargo.toml
sdk/secret-vault/: Cargo.toml
sdk/system-monitor/: Cargo.toml
sdk/tauri-plugin-clipboard/: Cargo.toml  README.md  index.ts  package.json  tsconfig.json
sdk/tauri-plugin-menu/: Cargo.toml  index.ts  package-lock.json  package.json
sdk/tauri-plugin-portal/: Cargo.toml  README.md  index.ts  package.json
sdk/tauri-plugin-shell/: Cargo.toml  build.rs  index.ts  package.json
sdk/theme/: Cargo.toml
sdk/ui-kit/: README.md  package-lock.json  package.json  vitest-setup.ts  vitest.config.ts
(+3826 files in other folders)
