[package]
name = "forage"
version = "0.1.0"
edition = "2021"
description = "Arlen OS package manager CLI"

[[bin]]
name = "forage"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
arlen-modules = { path = "../sdk/modules" }
colored = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"
dirs = "6"
