[workspace]
members = [
    "config",
    "config-format",
    "arlen-input-client",
    "os-sdk",
    "module-sdk",
    "confiner",
    "landlock-fence",
    "modules",
    "net-guard",
    "system-monitor",
    "permissions",
    "screen-capture",
    "secret-vault",
    "tauri-plugin-clipboard",
    "tauri-plugin-menu",
    "tauri-plugin-portal",
    "tauri-plugin-shell",
    "theme",
]
resolver = "2"
