[package]
license = "AGPL-3.0-only"
name = "arlen-ai-agent"
version = "0.1.0"
edition = "2021"
description = "Autonomous agent daemon for the Arlen AI layer. Exposes org.arlen.AIAgent1 on the session D-Bus. Each autonomous behaviour is an opt-in Settings toggle (Foundation §5.5); the daemon only runs when at least one behaviour is enabled."

[[bin]]
name = "arlen-ai-agent"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
# Default build screens with no native dependency: the injection-classifier
# seam exists and is exercised by tests with a stub, but the daemon wires no
# real classifier, so external content is sanitised (S18-B text stripper, in
# process) and flows under the gate's mandatory-confirmation containment. The
# `onnx` feature pulls in the ONNX-backed classifier (S17) and lets the daemon
# screen external content against the provisioned Prompt-Guard model before it
# reaches the LLM. Off by default so the workspace and CI build without the
# ONNX Runtime present (matches arlen-ai-classifier's own gating).
default = []
onnx = ["arlen-ai-classifier/onnx"]

[dependencies]
arlen-ai-core = { path = "../ai-core" }
arlen-ai-providers = { path = "../ai-providers" }
arlen-ai-classifier = { path = "../ai-classifier" }
arlen-ai-sandbox = { path = "../ai-sandbox" }
arlen-ai-skills = { path = "../ai-skills" }
arlen-ai-undo-core = { path = "../ai-undo-core" }
arlen-ai-undo-proto = { path = "../ai-undo-proto" }
# The proposed file-change shape carried on a gate-card proposal (the harness
# diff card body). Shared with the harness frontend via the crate's ts-rs bindings.
arlen-file-change = { path = "../../contracts/file-change" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
os-sdk = { path = "../../sdk/os-sdk" }
prost = "0.13"
async-trait = "0.1"
futures = "0.3"
sha2 = "0.10"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
audit-proto = { path = "../../contracts/audit-proto", features = ["test-util"] }
tokio = { version = "1", features = ["test-util"] }
tempfile = "3"
