[package]
name = "arlen-ai-core"
version = "0.1.0"
edition = "2021"
description = "Shared library for the Arlen AI layer. Defines the AIProvider trait, routing engine, MCP client wrapper, audit log producer, capability gate, content-origin tagging, and the two-step Cypher pipeline."

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
arlen-ai-classifier = { path = "../ai-classifier" }
arlen-graph-schema = { path = "../../contracts/graph-schema" }
audit-proto = { path = "../../contracts/audit-proto" }
hex = "0.4"
rand = "0.8"
rmcp = { version = "1.7", features = ["client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net", "io-util"] }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[features]
# Forward the native ONNX classifier so `Screener::from_config` can load a model.
# Off by default (no native deps); a configured-but-not-loadable classifier fails
# closed (see `Screener::from_config`).
onnx = ["arlen-ai-classifier/onnx"]

[dev-dependencies]
rmcp = { version = "1.7", features = ["client", "server", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
# The in-memory MockAuditSink is gated behind audit-proto's `test-util`
# feature so it cannot reach a production build; the tests enable it.
audit-proto = { path = "../../contracts/audit-proto", features = ["test-util"] }
