[package]
license = "Apache-2.0"
name = "arlen-ai-meeting-notes"
version = "0.1.0"
edition = "2021"
description = "The meeting-notes engine: screens the untrusted transcript, prompts a provider for a grounded summary and action items, and validates the structured result into a MeetingNote document"

[dependencies]
arlen-ai-core = { path = "../ai-core" }
arlen-transcript = { path = "../../contracts/transcript" }
arlen-meeting-note = { path = "../../contracts/meeting-note" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
async-trait = "0.1"
