[package]
license = "AGPL-3.0-only"
name = "arlen-ai-model-manager"
version = "0.1.0"
description = "Hardware-aware local-model fit and speed recommender for the Arlen model manager"
authors = ["Arlen"]
edition = "2021"

[lib]
name = "arlen_ai_model_manager"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
tempfile = "3"
# The consent-gated model download: SSRF-pinned (net-guard resolve_and_pin), rustls
# HTTPS, redirect-disabled (we follow + re-pin every hop ourselves), streamed via
# the blocking client straight into the sha-verified store (a GGUF is GiB-scale).
arlen-net-guard = { path = "../../sdk/net-guard" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
tokio = { version = "1", features = ["rt", "net", "time"] }
