[package]
name = "arlen-ai-sandbox"
version = "0.1.0"
edition = "2021"
description = "Document-parsing isolation subprocess for the Arlen AI layer. Parses untrusted documents in a seccomp + Landlock sandbox with no network and no filesystem access; only stripped text leaves."

[lib]
path = "src/lib.rs"

[[bin]]
name = "arlen-doc-sandbox"
path = "src/bin/arlen-doc-sandbox.rs"

# The sandboxed image thumbnailer. Behind the `thumbnail` feature so document-
# parsing consumers (the AI layer) do not pull the image-decode dependency.
[[bin]]
name = "arlen-thumbnail-sandbox"
path = "src/bin/arlen-thumbnail-sandbox.rs"
required-features = ["thumbnail"]

[features]
# Image thumbnailing: pulls the `image` decoders and builds the thumbnail
# worker. Off by default so a doc-parse-only consumer stays lean.
thumbnail = ["dep:image"]

[dependencies]
thiserror = "2"
tracing = "0.1"
# Untrusted image decoding for the sandboxed thumbnailer (the `thumbnail`
# feature). Decoders are a memory-unsafe attack surface, so the decode runs
# inside the worker's Landlock + seccomp lockdown; only the re-encoded
# thumbnail leaves. Default features off so only the explicit codecs link.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"
libc = "0.2"

[dev-dependencies]
# Synthesise test images for the thumbnail integration test (gated on the
# `thumbnail` feature; only compiled when that feature is enabled).
image = { version = "0.25", default-features = false, features = ["png"] }
