[package]
name = "arlen-ai-sandbox"
version = "0.1.0"
edition = "2021"
description = "Document-parsing isolation subprocess for the Arlen AI layer. Parses untrusted documents in a seccomp + Landlock sandbox with no network and no filesystem access; only stripped text leaves."

[lib]
path = "src/lib.rs"

[[bin]]
name = "arlen-doc-sandbox"
path = "src/bin/arlen-doc-sandbox.rs"

# The sandboxed image thumbnailer. Behind the `thumbnail` feature so document-
# parsing consumers (the AI layer) do not pull the image-decode dependency.
[[bin]]
name = "arlen-thumbnail-sandbox"
path = "src/bin/arlen-thumbnail-sandbox.rs"
required-features = ["thumbnail"]

# The sandboxed music cover-art thumbnailer. Extracts a file's embedded album
# art and thumbnails it; behind the `music` feature so non-music consumers pull
# neither the metadata reader nor the image decoders.
[[bin]]
name = "arlen-music-thumbnail-sandbox"
path = "src/bin/arlen-music-thumbnail-sandbox.rs"
required-features = ["music"]

[features]
# Image thumbnailing: pulls the `image` decoders and builds the thumbnail
# worker. Off by default so a doc-parse-only consumer stays lean.
thumbnail = ["dep:image"]
# Music cover-art thumbnailing: pulls the `lofty` metadata reader to extract the
# embedded picture, then reuses the image path to decode and downscale it.
music = ["thumbnail", "dep:lofty"]

[dependencies]
thiserror = "2"
tracing = "0.1"
# Untrusted image decoding for the sandboxed thumbnailer (the `thumbnail`
# feature). Decoders are a memory-unsafe attack surface, so the decode runs
# inside the worker's Landlock + seccomp lockdown; only the re-encoded
# thumbnail leaves. Default features off so only the explicit codecs link.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"], optional = true }
# Audio metadata reader for the music cover-art thumbnailer (the `music`
# feature). Parsing an untrusted media container is a memory-unsafe attack
# surface, so the extraction runs inside the worker's lockdown alongside the
# decode; only the re-encoded thumbnail leaves.
lofty = { version = "0.24", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"
libc = "0.2"

[dev-dependencies]
# Synthesise test images (multiple formats) for the thumbnail integration test,
# to exercise each enabled decoder under the live sandbox.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
