[package]
name = "arlen-ai-sandbox"
version = "0.1.0"
edition = "2021"
description = "Document-parsing isolation subprocess for the Arlen AI layer. Parses untrusted documents in a seccomp + Landlock sandbox with no network and no filesystem access; only stripped text leaves."

[lib]
path = "src/lib.rs"

[[bin]]
name = "arlen-doc-sandbox"
path = "src/bin/arlen-doc-sandbox.rs"

# The sandboxed image thumbnailer. Behind the `thumbnail` feature so document-
# parsing consumers (the AI layer) do not pull the image-decode dependency.
[[bin]]
name = "arlen-thumbnail-sandbox"
path = "src/bin/arlen-thumbnail-sandbox.rs"
required-features = ["thumbnail"]

# The sandboxed full-resolution image-view worker (apps/viewers). Decodes an
# untrusted image at viewer resolution; behind the `thumbnail` feature, sharing
# the same image decoders as the thumbnailer.
[[bin]]
name = "arlen-image-view-sandbox"
path = "src/bin/arlen-image-view-sandbox.rs"
required-features = ["thumbnail"]

# The sandboxed music cover-art thumbnailer. Extracts a file's embedded album
# art and thumbnails it; behind the `music` feature so non-music consumers pull
# neither the metadata reader nor the image decoders.
[[bin]]
name = "arlen-music-thumbnail-sandbox"
path = "src/bin/arlen-music-thumbnail-sandbox.rs"
required-features = ["music"]

# The sandboxed audio-metadata worker (apps/viewers player surface). Reads an
# untrusted audio file's playback properties + tags behind the lockdown and
# writes them back as JSON; behind the `music` feature.
[[bin]]
name = "arlen-audio-meta-sandbox"
path = "src/bin/arlen-audio-meta-sandbox.rs"
required-features = ["music"]

[features]
# Image thumbnailing: pulls the `image` decoders and builds the thumbnail
# worker. Off by default so a doc-parse-only consumer stays lean.
thumbnail = ["dep:image", "dep:jxl-oxide"]
# Music cover-art thumbnailing + audio metadata: pulls the `lofty` metadata
# reader to extract the embedded picture and read playback properties/tags, then
# reuses the image path to decode and downscale the art. `serde`/`serde_json`
# carry the structured `AudioMeta` out of the metadata worker.
music = ["thumbnail", "dep:lofty", "dep:serde", "dep:serde_json"]

[dependencies]
thiserror = "2"
tracing = "0.1"
# Untrusted image decoding for the sandboxed thumbnailer (the `thumbnail`
# feature). Decoders are a memory-unsafe attack surface, so the decode runs
# inside the worker's Landlock + seccomp lockdown; only the re-encoded
# thumbnail leaves. Default features off so only the explicit codecs link.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"], optional = true }
# Pure-Rust JPEG XL decoder (the `thumbnail` feature). `image`-rs covers neither
# JXL nor HEIC; jxl-oxide closes the JXL half of that gap. Decode-only, no C dep,
# so it runs inside the same Landlock + seccomp worker as the other decoders.
# default-features off drops rayon: the decode stays SINGLE-THREADED so it needs
# no thread-creation (`clone`) syscall, which the worker's seccomp allowlist does
# not permit (verified: the rayon default fails closed under the sandbox).
jxl-oxide = { version = "0.12", default-features = false, optional = true }
# Audio metadata reader for the music cover-art thumbnailer (the `music`
# feature). Parsing an untrusted media container is a memory-unsafe attack
# surface, so the extraction runs inside the worker's lockdown alongside the
# decode; only the re-encoded thumbnail leaves.
lofty = { version = "0.24", optional = true }
# Carry the structured `AudioMeta` across the metadata worker's stdout (the
# `music` feature). JSON keeps title/artist/album text safely encoded instead of
# a hand-rolled delimited format.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"
libc = "0.2"

[dev-dependencies]
# Synthesise test images (multiple formats) for the thumbnail integration test,
# to exercise each enabled decoder under the live sandbox.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
