[package]
name = "arlen-ai-undo-core"
version = "0.1.0"
edition = "2021"
description = "Shared undo-log vocabulary for the Arlen AI agent's reversible-receipts effect model: the non-graph inverse-receipt types, the event-sourced lifecycle state machine, and the HMAC-chained on-disk log. Depended on by both arlen-ai-agent (the submitter) and arlen-ai-undo-signer (the separate-uid sealer)."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
