[package]
name = "arlen-ai-undo-signer"
version = "0.1.0"
edition = "2021"
description = "The separate-uid signer helper that seals the AI agent's durable undo-log (reversible-receipts-and-the-effect-model.md EM-R1). Owns the HMAC key the agent never sees, the HMAC-chained on-disk log, peer-authed access control, and a submit/lookup socket, so a same-uid compromised agent can neither forge nor read undo history."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2"
getrandom = "0.2"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
