[package]
name = "arlen-ai-undo-signer"
version = "0.1.0"
edition = "2021"
description = "The signer helper that seals the AI agent's durable undo-log (reversible-receipts-and-the-effect-model.md EM-R1). Owns the HMAC key, the HMAC-chained on-disk log, peer-authed access control, and a submit/lookup socket. As built it runs same-uid: defense-in-depth (process isolation + tamper-evidence) against a non-agent same-uid process and accidental corruption, not integrity against a fully-compromised agent. The separate-uid property that withholds the key from a compromised agent is provisioned at deploy time and closed only by the installd inode-keyed identity registry plus a TPM-sealed counter."

[lib]
path = "src/lib.rs"

[dependencies]
arlen-ai-undo-core = { path = "../ai-undo-core" }
arlen-ai-undo-proto = { path = "../ai-undo-proto" }
arlen-permissions = { path = "../../sdk/permissions" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
getrandom = "0.2"
zeroize = "1"
libc = "0.2"
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "rt", "rt-multi-thread", "signal", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
# `test-util` enables paused-time control so the read-timeout test fires instantly.
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
