[package]
license = "Apache-2.0"
name = "arlen-capsule"
version = "0.1.0"
edition = "2021"
description = "Context Capsule wire contract: the scope selector, the frozen-slice model and its canonical serialization, shared by the knowledge daemon (which materializes a slice as of T_mint), the capsuled daemon, and the os-sdk client"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
