[package]
license = "Apache-2.0"
name = "arlen-meeting-note"
version = "0.1.0"
edition = "2021"
description = "Meeting note document model: the structured summary, action items and embedded transcript the meeting-notes engine produces, and its markdown rendering, which the text-editor opens as a KG-citizen document and the Knowledge app explores"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arlen-transcript = { path = "../transcript" }
