[package]
license = "Apache-2.0"
name = "arlen-transcript"
version = "0.1.0"
edition = "2021"
description = "Transcription wire contract: the speaker-attributed segment model an ASR component (faster-whisper) produces and the meeting-notes and shell-voice engines consume, with the post-processing every consumer shares (full text for the summarizer, segment lookup by timestamp for click-to-transcript, adjacent same-speaker merge into utterances)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
