[package]
name = "arlen-ai-engine-daemon"
version = "0.1.0"
edition = "2021"
description = "Arlen AI engine daemon: supervises the swappable agent engine (pi) behind the engine-neutral contract, authenticates it via SO_PEERCRED + a daemon-minted session token, and bounds every action to the session grant server-side"
authors = ["Arlen"]

[[bin]]
name = "arlen-ai-engine-daemon"
path = "src/main.rs"

[lib]
name = "arlen_ai_engine_daemon"

[dependencies]
# The engine-neutral five-verb contract this daemon speaks.
ai-engine-contract = { path = "../../contracts/ai-engine-contract" }
# The existing Arlen capability model the gate seam re-points to (Phase 1
# glue: Authorize -> Capability::decide). The daemon is the glue layer that
# couples to ai-core; the contract crate stays engine-neutral.
arlen-ai-core = { path = "../../ai/ai-core" }
# CSPRNG for the unguessable session token.
getrandom = "0.2"
async-trait = "0.1"
serde_json = "1"
arlen-permissions = { path = "../../sdk/permissions" }
# The audit ledger sink (AuditSink + LedgerAuditSink) the reporter seam records
# tool results to; the content-free event builders live in arlen-ai-core.
audit-proto = { path = "../../contracts/audit-proto" }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "sync", "signal", "time"] }

[dev-dependencies]
# test-util enables the paused clock the supervise-loop test drives.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
# test-util exposes MockAuditSink for the reporter-seam tests (the bin build
# excludes dev-deps, so the mock never reaches the daemon binary).
audit-proto = { path = "../../contracts/audit-proto", features = ["test-util"] }

[workspace]
