[package]
name = "arlen-ai-engine-daemon"
version = "0.1.0"
edition = "2021"
description = "Arlen AI engine daemon: supervises the swappable agent engine (pi) behind the engine-neutral contract, authenticates it via SO_PEERCRED + a daemon-minted session token, and bounds every action to the session grant server-side"
authors = ["Arlen"]

[[bin]]
name = "arlen-ai-engine-daemon"
path = "src/main.rs"

[lib]
name = "arlen_ai_engine_daemon"

[dependencies]
# The engine-neutral five-verb contract this daemon speaks.
ai-engine-contract = { path = "../../contracts/ai-engine-contract" }
# The existing Arlen capability model the gate seam re-points to (Phase 1
# glue: Authorize -> Capability::decide). The daemon is the glue layer that
# couples to ai-core; the contract crate stays engine-neutral.
arlen-ai-core = { path = "../../ai/ai-core" }
# CSPRNG for the unguessable session token.
getrandom = "0.2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Reads only the `[ai] enabled` master switch from ai.toml (fail-closed).
toml = "0.8"
arlen-permissions = { path = "../../sdk/permissions" }
# The audit ledger sink (AuditSink + LedgerAuditSink) the reporter seam records
# tool results to; the content-free event builders live in arlen-ai-core.
audit-proto = { path = "../../contracts/audit-proto" }
# The os-sdk graph client the read executor's GraphQuerier adapter bridges onto
# the ai-core pipeline. Daemon-local glue: ai-core deliberately does not depend
# on os-sdk, so each daemon owns this thin bridge (mirrors ai-daemon's).
os-sdk = { path = "../../sdk/os-sdk" }
# The shared bwrap confiner: the pi sidecar's confinement (read-only base +
# node/pi, the bound contract/proxy sockets, no network) is built on its
# app-runtime profile rather than hand-rolling bwrap flags here.
arlen-confiner = { path = "../../sdk/confiner" }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "sync", "signal", "time", "process"] }

[dev-dependencies]
# test-util enables the paused clock the supervise-loop test drives.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
# test-util exposes MockAuditSink for the reporter-seam tests (the bin build
# excludes dev-deps, so the mock never reaches the daemon binary).
audit-proto = { path = "../../contracts/audit-proto", features = ["test-util"] }
# The cross-language e2e gate test (tests/e2e_gate.rs) builds a real dispatcher
# and authenticates a spawned Node child; these regular deps are mirrored here so
# the integration-test crate can name them.
ai-engine-contract = { path = "../../contracts/ai-engine-contract" }
async-trait = "0.1"
libc = "0.2"
serde_json = "1"

[workspace]
